Fix typos in README and docs

--- a/docs/source/notebooks/00_Introduction.ipynb
+++ b/docs/source/notebooks/00_Introduction.ipynb
@@ -14,7 +14,7 @@
     "---\n",
     "\n",
     "## 1. Introduction\n",
-    "Researches on meteorology and oceanography usually encounter [inversion problems](https://doi.org/10.1017/CBO9780511629570) that need to be solved numerically.  One of the classical inversion problem is to solve for a streamfunction $\\psi$ given the vertical component of vorticity $\\zeta$ and proper boundary conditions:\n",
+    "Researches on meteorology and oceanography usually encounter [inversion problems](https://doi.org/10.1017/CBO9780511629570) that need to be solved numerically.  One of the classical inversion problems is to solve for a streamfunction $\\psi$ given the vertical component of vorticity $\\zeta$ and proper boundary conditions:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -22,9 +22,9 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Nowadays [xarray](http://xarray.pydata.org/en/stable/) becomes a popular data structure commonly used in [Big Data Geoscience](https://pangeo.io/).  Since the whole 4D data, as well as the coordinate information, are all combined into [xarray](http://xarray.pydata.org/en/stable/), solving the inversion problem become quite straightforward and the only input would be just one [xarray.DataArray](http://xarray.pydata.org/en/stable/) of $\\zeta$.  Inversion on the spherical earth, like some meteorological problems, could utilize the spherical harmonics like [windspharm](https://github.com/ajdawson/windspharm), which would be more efficient using FFT than SOR used here.  However, in the case of ocean, SOR method is definitely a better choice in the presence of land/sea mask.\n",
+    "Nowadays [xarray](http://xarray.pydata.org/en/stable/) becomes a popular data structure commonly used in [Big Data Geoscience](https://pangeo.io/).  Since the whole 4D data, as well as the coordinate information, are all combined into [xarray](http://xarray.pydata.org/en/stable/), solving the inversion problem becomes quite straightforward and the only input would be just one [xarray.DataArray](http://xarray.pydata.org/en/stable/) of $\\zeta$.  Inversion on the spherical earth, like some meteorological problems, could utilize the spherical harmonics like [windspharm](https://github.com/ajdawson/windspharm), which would be more efficient using FFT than SOR used here.  However, in the case of ocean, the SOR method is definitely a better choice in the presence of a land/sea mask.\n",
     "\n",
-    "More importantly, this could be generalized into a numerical solver for second-order (or even fourth-order) partial differential equations using [SOR](https://mathworld.wolfram.com/SuccessiveOverrelaxationMethod.html) method.  Various popular inversion problems in geophysical fluid dynamics will be illustrated as examples.\n",
+    "More importantly, this could be generalized into a numerical solver for second-order (or even fourth-order) partial differential equations using the [SOR](https://mathworld.wolfram.com/SuccessiveOverrelaxationMethod.html) method.  Various popular inversion problems in geophysical fluid dynamics will be illustrated as examples.\n",
     "\n",
     "One problem with SOR is that the speed of iteration using explicit python loops will be **e-x-t-r-e-m-e-l-y ... s-l-o-w**!  A very suitable solution here is to use [numba](https://numba.pydata.org/).  We may try our best to speed things up using more hardwares (possibly GPU).\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "where coefficients $A-G$ are all known variables.  When the condition $4AC-B^2>0$ is met everywhere in the domain, the above equation is an elliptic-type equation.  In this case, one can invert $\\psi$ using the [SOR](https://mathworld.wolfram.com/SuccessiveOverrelaxationMethod.html) iteration method.  When $4AC-B^2=0$ or $4AC-B^2<0$, it is a parabolic or hyperbolic equation.  In either case, SOR would fail to converge to the solution.\n",
     "\n",
-    "Sometimes the **general form** of Eq. (2) can be transformed into the **standard form** (i.e., standarization):\n",
+    "Sometimes the **general form** of Eq. (2) can be transformed into the **standard form** (i.e., standardization):\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -61,7 +61,7 @@
     "\n",
     "In this case, $AD-BC>0$ should be met to insure its ellipticity.  The elliptic condition has its own physical meaning in the problems of interest.  That is, the system is in steady states that are stable to any small perturbation.\n",
     "\n",
-    "Many problems in meteorology and oceanography can be cast into the forms of either Eq. (2) or Eq. (3).  However, some of them are formulated in **3D case** (like the QG omega equation):\n",
+    "Many problems in meteorology and oceanography can be cast into the forms of either Eq. (2) or Eq. (3).  However, some of them are formulated in a **3D form** (like the QG omega equation):\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -69,7 +69,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "or in **fourth-order** case (Munk model):\n",
+    "or in **fourth-order** form (Munk model):\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -78,13 +78,13 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "So we implements four basic solvers to take into account the above four Eqs. (2-5) or cases.  If a problem do not fit into one of these four types, we are going to add one solver for this type of problem.  We hope **NOT** so because we want to **keep the solvers as minimum and general as possible**.\n",
+    "So we implement four basic solvers to take into account the above four Eqs. (2-5) or cases.  If a problem does not fit into one of these four types, we are going to add one solver for this type of problem.  We do **NOT** hope so because we want to **keep the solvers as minimal and general as possible**.\n",
     "\n",
     "---\n",
     "\n",
-    "## 3. Physical problems at hands\n",
+    "## 3. Physical problems at hand\n",
     "\n",
-    "Here we summarize all the inversion problems in meteorology and oceanography into the following table.  The table can be extended further if one finds more problems that fit Eq. (1).  Also, the top API calls for the users are also listed for references.\n",
+    "Here we summarize all the inversion problems in meteorology and oceanography into the following table.  The table can be extended further if one finds more problems that fit Eq. (1).  Also, the top API calls for the user are also listed for reference.\n",
     "\n",
     "|  Names |  Equations  | A PI calls  |\n",
     "| -----: | :---------: | :---------- |\n",
