Fix typos in notebooks

--- a/docs/source/notebooks/01_Poisson_equation_horizontal.ipynb
+++ b/docs/source/notebooks/01_Poisson_equation_horizontal.ipynb
@@ -13,7 +13,7 @@
     "---\n",
     "\n",
     "## 1. Introduction\n",
-    "One of the classical inversion problem is to solve for a streamfunction $\\psi$ given the vertical component of vorticity $\\zeta$ and proper boundary conditions:\n",
+    "One of the classical inversion problems is to solve for a streamfunction $\\psi$ given the vertical component of vorticity $\\zeta$ and proper boundary conditions:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -39,7 +39,7 @@
     "\n",
     "---\n",
     "## 2. Example: Helmholtz decomposition\n",
-    "This is a classical problem in both meteorology and oceanography that a vector flow field can be deomposed into rotational and divergent parts (known as [Helmholtz decomposition](https://en.wikipedia.org/wiki/Helmholtz_decomposition)), where rotational and divergent parts are represented by the streamfunction $\\psi$ and velocity potential $\\chi$ as:\n",
+    "It is a classical problem in both meteorology and oceanography to decompose a vector flow field into rotational and divergent parts (known as [Helmholtz decomposition](https://en.wikipedia.org/wiki/Helmholtz_decomposition)), where rotational and divergent parts are represented by the streamfunction $\\psi$ and velocity potential $\\chi$ as:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -48,7 +48,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Given vorticity ($\\zeta$) and divergence ($\\eta$) as the forcing functions respectively in Eqs. (1) and (2) (i.e., two Poisson equations), one can invert the streamfunction $\\psi$ and velocity potential $\\chi$ using [SOR](https://mathworld.wolfram.com/SuccessiveOverrelaxationMethod.html) iteration method.\n"
+    "Given vorticity ($\\zeta$) and divergence ($\\eta$) as the forcing functions respectively in Eqs. (1) and (2) (i.e., two Poisson equations), one can invert the streamfunction $\\psi$ and velocity potential $\\chi$ using the [SOR](https://mathworld.wolfram.com/SuccessiveOverrelaxationMethod.html) iteration method.\n"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inverting the streamfunction, within lat/lon plane but loop over time dimension, is as simple as:"
+    "Inverting the streamfunction, within the lat/lon plane but loop over the time dimension, is as simple as:"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that this is a global case, so the zonal boundary condition is periodic.  Meridional extend boundary condition allows streamfunction to variate near the poles.  The result can be visualized as:"
+    "Notice that this is a global case, so the zonal boundary condition is periodic.  The meridional extend boundary condition allows the streamfunction to vary near the poles.  The result can be visualized as:"
    ]
   },
   {
